influences from my experiences with the former kwm.

In 0.10:
--------
  patchlevel 21:
       - fix for motif applications: program-defined positioning will
         be ignored while user-defined positiong still works.
         Most toolkits define user-defined if it is is programm-defined
         anyway so this should not harm.
       - fixes and enhancements for dock-windows

  patchlevel 20:
       - self-transient do not crash kwm anymore
       - new option:
              Button3Grab=on/off  
         to make "missbehaving" clients like GIMP usable on a KDE desktop.
       - new kwmrc-option: RstartProtocol. Defaults to "rstart -v"
       - support for noFocus property
       - on fast X-Servers the resize animation sometimes left a tiny 
         rectangle: fixed
  
  patchlevel 19:
       - small fixes for swallowing
       - bugfix for  TitlebarPixmapActive
       - auto-iconify-on-focus-loss applies only for floating windows
         (like kde toolbars or kde menubars)
       - re-introduced explicit XUnmapWindow calls for the inner windows.
         This is important for video cards etc. I hope I did not break 
         anything.
       - resize animation improved (thanks to Hans-Guenther Nusseck)
       - bugfixes for auto-iconify

  patchlevel 18:
       - transient windows become iconified if the main window loses
         the focus (and none of its transient gets it instead!)
       - combind history completion with kURLcompletion in minicli

       - minicli changes by Torben:
           - minicli does handle URLs now like http://....
           - minicli handles URLs like "www.xxx" or "ftp.xxxx"
           - minicli handles dirctories like "/home/weis"
           - minicli has tab completion ( use TAB and Ctrl+D )
           - minicli supports the URL man:
           - minicli understand #kill, this will search the
	             man page for kill and is a shortcut for man:kill

       - new options TitlebarPixmapActive/TitlebarPixmapInactive. Used